--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,20 @@
+alembic==1.13.0
 Babel==2.9.0
 blinker==1.7.0
 click==8.1.7
 Flask==3.0.0
+Flask-Migrate==4.0.5
 Flask-Moment==1.0.5
-Flask-SQLAlchemy==2.4.4
-Flask-WTF==0.14.3
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
 importlib-metadata==7.0.0
+importlib-resources==6.1.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
+Mako==1.3.0
 MarkupSafe==2.1.3
 packaging==23.2
+psycopg2-binary==2.9.9
 python-dateutil==2.6.0
 pytz==2023.3.post1
 six==1.16.0
